--- a/AdventOfCode2017/AdventOfCode2017.csproj
+++ b/AdventOfCode2017/AdventOfCode2017.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Puzzles\Day1.cs" />
+    <Compile Include="Puzzles\Day2.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
