--- a/AdventOfCode2017/AdventOfCode2017.csproj
+++ b/AdventOfCode2017/AdventOfCode2017.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Puzzles\Day1.cs" />
     <Compile Include="Puzzles\Day2.cs" />
+    <Compile Include="Puzzles\Day3.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
