--- a/AdventOfCode2017/AdventOfCode2017.csproj
+++ b/AdventOfCode2017/AdventOfCode2017.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Puzzles\Day1.cs" />
     <Compile Include="Puzzles\Day2.cs" />
     <Compile Include="Puzzles\Day3.cs" />
+    <Compile Include="Puzzles\Day4.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
