--- a/AdventOfCode2017/AdventOfCode2017.csproj
+++ b/AdventOfCode2017/AdventOfCode2017.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Puzzles\Day6.cs" />
     <Compile Include="Puzzles\Day7.cs" />
     <Compile Include="Puzzles\Day8.cs" />
+    <Compile Include="Puzzles\Day9.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
